fix music controller hidden by phone navigation and fix prev, next button

--- a/src/components/ListMusic/AllListMusic.css
+++ b/src/components/ListMusic/AllListMusic.css
@@ -1,30 +1,33 @@
 @import url("../../index.css");
 
 div.all-list-music {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
 
-    gap: 1em;
+  gap: 1em;
 
-    padding: var(--padding-rule-280);
-    margin-top: 2em;
+  padding: var(--padding-rule-280);
+  margin-top: 2em;
+
+  min-height: 60vh;
 }
 
 @media all and (min-width: 768px) {
-    div.all-list-music {
-        gap: 1.5em;
-        grid-template-columns: repeat(2, 1fr);
+  div.all-list-music {
+    gap: 1.5em;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 5em;
 
-        width: var(--width-rightside-768);
-        padding: var(--padding-rule-768);
-        margin-top: 3em;
-        margin-left: var(--space-sidebar-768);
-    }
+    width: var(--width-rightside-768);
+    padding: var(--padding-rule-768);
+    margin-top: 3em;
+    margin-left: var(--space-sidebar-768);
+  }
 }
 
 @media all and (min-width: 1024px) {
-    div.all-list-music {
-        width: var(--width-rightside-1024);
-        margin-left: var(--space-sidebar-1024);
-    }
+  div.all-list-music {
+    width: var(--width-rightside-1024);
+    margin-left: var(--space-sidebar-1024);
+  }
 }
